--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-title{
-    color:white;
-    line-height: 0;
+h1{
+    font-family: "Press Start 2P";
+    font-weight: 100;
+    color: white;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 body{
@@ -8,7 +11,31 @@ body{
 }
 
 button{
-    color: honeydew;
-    background-color: darkseagreen;
+    color:black;
+    background-color:white;
     border-radius: 5px;
+}
+
+.button-container {
+    display: flex; 
+    justify-content: center; 
+    gap: 10px;
+    margin: 20px 0;
+}
+
+img {
+    display: block; 
+    margin: 20px auto;
+    max-width: 30%;
+    height: auto;
+}
+
+h4{
+    color:white;
+    text-align: center;
+    font-weight: 50;
+}
+
+hr{
+    line-height: 0;
 }
