--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@ h1{
     font-family: "Press Start 2P";
     font-weight: 100;
     color: white;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     text-align: center;
 }
 
 body{
     background-color: black;
+    overflow: hidden;
 }
 
 button{
@@ -16,16 +17,9 @@ button{
     border-radius: 5px;
 }
 
-.button-container {
-    display: flex; 
-    justify-content: center; 
-    gap: 10px;
-    margin: 20px 0;
-}
-
 img {
     display: block; 
-    margin: 20px auto;
+    margin: 10px auto;
     max-width: 30%;
     height: auto;
 }
@@ -36,6 +30,48 @@ h4{
     font-weight: 50;
 }
 
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap:wrap;
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 0px 20px;
+    align-items: center;
+}
+
+nav ul li a{
+    color: white;
+    text-decoration: none;
+    font-size: 18;
+}
+
 hr{
     line-height: 0;
+    marign:10px 0;
+}
+
+#container{
+    margin-top:0px;
+    margin-bottom: 0px;
+}
+
+#cursor {
+    position: absolute;
+    width: 64px; /* Adjust width for your cursor image */
+    height: 64px; /* Adjust height for your cursor image */
+    background-image: url("Images/cursor.png"); /* Use your custom cursor image */
+    background-size: contain; /* Scale the image to fit */
+    background-repeat: no-repeat; /* Prevent repeating the image */
+    pointer-events: none; /* Prevent the cursor from blocking mouse events */
+    transform-origin: center; /* Set the pivot point for rotation */
+    transition: transform 0.1s; /* Smooth transition for rotation */
+}
+
+html, body{
+    cursor: none;
 }
